infra/k3s/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: smartcane
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: smartcane-backend-strip-prefix@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/service.serverstransport: sse-transport@smartcane
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k14c102.p.ssafy.io
      secretName: backend-api-tls
  rules:
    - host: k14c102.p.ssafy.io
      http:
        paths:
          - path: /map.html
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /swagger-ui.html
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
